styled item forms, stop cat description overflow
styled item add/edit forms
switched larger text inputs to textarea instead
stopped category description overflow by limiting to 2 rows with elipsis

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -154,20 +154,31 @@ a:hover {
   text-align: start;
 }
 
-form {
+.item-form {
   display: flex;
   flex-direction: column;
+  margin: 5px auto;
+  border: 1px solid black;
+  border-radius: 5px;
+  background-color: var(--card-bg-colour);
+  max-width: 90%;
+  min-width: 350px;
 }
 
-form > input,
-form > select {
+.item-form > input,
+.item-form > select,
+.item-form > textarea {
   width: 300px;
   margin: 5px auto;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 2px;
+  background-color: white;
 }
 
-form > button {
+.item-form > button {
   width: 100px;
-  margin: auto;
+  margin: 5px auto;
 }
 
 .button {
@@ -331,12 +342,23 @@ form > button {
 .welcome-message {
   font-size: 24px;
   text-shadow: 0px 0px 2px white, 2px 2px 10px #888888;
-  /* text-shadow: ; */
   color: maroon;
+}
+
+.category-card-description {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media (min-width: 650px) {
   .product {
     max-width: 550px;
+  }
+
+  .item-form {
+    max-width: 585px;
   }
 }
